--- a/Practice/Spotify Clone/style.css
+++ b/Practice/Spotify Clone/style.css
@@ -32,7 +32,7 @@
     position: fixed;
     bottom: 0;
     width: 100%;
-    height: 100px;
+    height: 90px;
 }
 
 a{
@@ -107,7 +107,7 @@ a{
     background-color: #212121;
     height: 8rem;
     border-radius: 0.75rem;
-    margin: 0.75rem 0 1.75rem 0;
+    margin: 0.75rem 0 0.75rem 0;
     padding: 0.75rem 1rem;
 }
 
@@ -210,4 +210,186 @@ a{
     height: 50%;
     border-top: 1px solid white;
     opacity: 0.4;
+}
+
+.left-sidebar{
+    height: 80px;
+}
+
+.left-sidebar-option1{
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    padding:0 0.5rem 0 0.5rem;
+    font-size: 0.75rem;
+}
+    
+.left-sidebar-option2{
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    margin: 0;
+    padding:0 0.5rem 0 0.5rem;
+    font-size: 0.75rem;
+}
+
+.left-sidebar-btn{
+    background-color: #121212;
+    color: #ddd;
+    border: 1px solid #ddd;
+    border-radius: 50px;
+    font-weight: 700;
+    width: 6rem;
+    margin-top: 0.5rem;
+}
+
+.left-sidebar-option2 div:hover{
+    text-decoration: underline;
+}
+
+.left-sidebar-option1 div{
+    margin-right: 0.5rem;
+    margin-left: 0.5rem;
+    margin-top: 0 ;
+    padding: 0;
+    opacity: 0.5;
+}
+
+.left-sidebar-option1 div:hover{
+    opacity: 1;
+}
+
+.music-player{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.albums{
+    width: 25%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.players{
+    width: 50%;
+}
+
+.control {
+    width: 25%;
+    display: flex;
+}
+
+.player-control-icon{
+    height: 1rem;
+    margin-right: 1.75rem;
+    opacity: 0.7;
+}
+
+.player-controls{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.player-control-icon:hover{
+    opacity: 1;
+}
+
+.playback-bar{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.progress-bar{
+    width: 65%;
+    appearance: none;
+    background-color: transparent;
+    cursor: pointer;
+
+}
+
+.progress-bar::-webkit-slider-runnable-track{
+    background-color: #ddd;
+    height: 0.2rem;
+}
+
+.progress-bar::-webkit-slider-thumb{
+    appearance: none;
+    height: 1rem;
+    width: 1rem;
+    background-color: #1bd760;
+    border-radius: 50%;
+    margin-top: -6px;
+}
+
+.control{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background-color: #121212;
+    color: white;
+}
+
+.control-icon{
+    width: 1.5rem;
+    height: 1.5rem;
+}
+
+.albums-img img{
+    border-radius: 0.75rem;
+    margin: 1rem;
+}
+
+.albums-par{
+    font-size: 1rem;
+    margin-right: 1rem;
+}
+
+.par1{
+    opacity: 0.9;
+}
+
+.par2{
+    font-size: 0.75rem;
+    opacity: 0.7;
+}
+.albums-par p:hover{
+    opacity: 1;
+}
+
+.albums-icons{
+    display: flex;
+    justify-content: center;
+    margin-right: 1.2rem;
+}
+
+.albums-icons img{
+    height: 1.7rem;
+    width: 1.7rem;
+    margin-right: 1rem;
+}
+
+.control-bar{
+    width: 30%;
+    appearance: none;
+    background-color: transparent;
+    cursor: pointer;
+    padding-right: 1.25rem;
+}
+
+.control-bar::-webkit-slider-runnable-track{
+    background-color: #ddd;
+    height: 0.25rem;
+    border-radius: 50px;
+}
+
+.control-bar::-webkit-slider-thumb{
+    appearance: none;
+    height: 1rem;
+    width: 1rem;
+    border-radius: 50%;
+    margin-top: -6px;
 }
